Don't deadlock on rename("foo/foo", "foo") in the case where foo/foo is a directory. This doesn't affect non-wapbl renames; it affects wapbl because one of the lock acquisitions was moved up past where this case otherwise fails.

PR 40163 from Lloyd Parkes.